@@ -2,8 +2,11 @@ The version number is hardcoded into sdparm.c (in a C string);
 the rpm spec file: sdparm.spec ; the debian/changelog file;
 and the configure.ac file (in the AC_INIT item).
 
-ChangeLog for sdparm-1.04 [20090902] [svn: r106]
+ChangeLog for sdparm-1.04 [20090923] [svn: r107]
   - add SAT ATA Power condition mode page (sat2r06)
+  - sync with spc4r18
+  - add Power condition, update extended inquiry VPD pages
+  - update Power condition mode page
   - rename SAS-2 phy mode page to Enhanced phy control (SAS)
   - sdparm.spec: correction to configure call
 
